// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandyActions component should render when the user is linked to Clever 1`] = `
<HandyActions
  linkedToClever={true}
>
  <section
    className="handy-actions"
  >
    <h2>
      Handy actions
    </h2>
    <HandyAction
      icon={
        Object {
          "alt": "Map with a magnifying glass icon",
          "src": "undefined/images/icons/icons-map-search.svg",
        }
      }
      link="/assign/activity-library"
      text="Explore activity library"
    >
      <a
        className="handy-action focus-on-light"
        href="/assign/activity-library"
      >
        <img
          alt="Map with a magnifying glass icon"
          src="undefined/images/icons/icons-map-search.svg"
        />
        <span>
          Explore activity library
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Clipboard with a checkmark icon",
          "src": "undefined/images/icons/icons-clipboard-check.svg",
        }
      }
      link="/assign/diagnostic"
      text="Assign a diagnostic"
    >
      <a
        className="handy-action focus-on-light"
        href="/assign/diagnostic"
      >
        <img
          alt="Clipboard with a checkmark icon"
          src="undefined/images/icons/icons-clipboard-check.svg"
        />
        <span>
          Assign a diagnostic
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Table with a checkmark icon",
          "src": "undefined/images/icons/icons-table-check.svg",
        }
      }
      link="/teachers/classrooms/scorebook"
      text="View activity summary report"
    >
      <a
        className="handy-action focus-on-light"
        href="/teachers/classrooms/scorebook"
      >
        <img
          alt="Table with a checkmark icon"
          src="undefined/images/icons/icons-table-check.svg"
        />
        <span>
          View activity summary report
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Avatar with an eye next to it icon",
          "src": "undefined/images/icons/icons-account-view.svg",
        }
      }
      link="/teachers/classrooms?modal=view-as-student"
      text="View as a student"
    >
      <a
        className="handy-action focus-on-light"
        href="/teachers/classrooms?modal=view-as-student"
      >
        <img
          alt="Avatar with an eye next to it icon"
          src="undefined/images/icons/icons-account-view.svg"
        />
        <span>
          View as a student
        </span>
      </a>
    </HandyAction>
    <ExploreDemoAction>
      <button
        className="handy-action handy-action-button focus-on-light"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="Teacher preview icon"
          src="undefined/images/icons/icons-teacher-account-view.svg"
        />
        <span>
          Explore a demo teacher account
        </span>
      </button>
    </ExploreDemoAction>
    <HandyAction
      icon={
        Object {
          "alt": "Gift icon",
          "src": "undefined/images/icons/icons-gift.svg",
        }
      }
      link="/referrals"
      text="Refer a teacher"
    >
      <a
        className="handy-action focus-on-light"
        href="/referrals"
      >
        <img
          alt="Gift icon"
          src="undefined/images/icons/icons-gift.svg"
        />
        <span>
          Refer a teacher
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Three avatars icon",
          "src": "undefined/images/icons/icons-account-group.svg",
        }
      }
      link="/teachers/classrooms/new"
      text="Add a class"
    >
      <a
        className="handy-action focus-on-light"
        href="/teachers/classrooms/new"
      >
        <img
          alt="Three avatars icon"
          src="undefined/images/icons/icons-account-group.svg"
        />
        <span>
          Add a class
        </span>
      </a>
    </HandyAction>
  </section>
</HandyActions>
`;

exports[`HandyActions component should render when the user is not linked to Clever 1`] = `
<HandyActions
  linkedToClever={false}
>
  <section
    className="handy-actions"
  >
    <h2>
      Handy actions
    </h2>
    <HandyAction
      icon={
        Object {
          "alt": "Map with a magnifying glass icon",
          "src": "undefined/images/icons/icons-map-search.svg",
        }
      }
      link="/assign/activity-library"
      text="Explore activity library"
    >
      <a
        className="handy-action focus-on-light"
        href="/assign/activity-library"
      >
        <img
          alt="Map with a magnifying glass icon"
          src="undefined/images/icons/icons-map-search.svg"
        />
        <span>
          Explore activity library
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Clipboard with a checkmark icon",
          "src": "undefined/images/icons/icons-clipboard-check.svg",
        }
      }
      link="/assign/diagnostic"
      text="Assign a diagnostic"
    >
      <a
        className="handy-action focus-on-light"
        href="/assign/diagnostic"
      >
        <img
          alt="Clipboard with a checkmark icon"
          src="undefined/images/icons/icons-clipboard-check.svg"
        />
        <span>
          Assign a diagnostic
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Table with a checkmark icon",
          "src": "undefined/images/icons/icons-table-check.svg",
        }
      }
      link="/teachers/classrooms/scorebook"
      text="View activity summary report"
    >
      <a
        className="handy-action focus-on-light"
        href="/teachers/classrooms/scorebook"
      >
        <img
          alt="Table with a checkmark icon"
          src="undefined/images/icons/icons-table-check.svg"
        />
        <span>
          View activity summary report
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Avatar with an eye next to it icon",
          "src": "undefined/images/icons/icons-account-view.svg",
        }
      }
      link="/teachers/classrooms?modal=view-as-student"
      text="View as a student"
    >
      <a
        className="handy-action focus-on-light"
        href="/teachers/classrooms?modal=view-as-student"
      >
        <img
          alt="Avatar with an eye next to it icon"
          src="undefined/images/icons/icons-account-view.svg"
        />
        <span>
          View as a student
        </span>
      </a>
    </HandyAction>
    <ExploreDemoAction>
      <button
        className="handy-action handy-action-button focus-on-light"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="Teacher preview icon"
          src="undefined/images/icons/icons-teacher-account-view.svg"
        />
        <span>
          Explore a demo teacher account
        </span>
      </button>
    </ExploreDemoAction>
    <HandyAction
      icon={
        Object {
          "alt": "Gift icon",
          "src": "undefined/images/icons/icons-gift.svg",
        }
      }
      link="/referrals"
      text="Refer a teacher"
    >
      <a
        className="handy-action focus-on-light"
        href="/referrals"
      >
        <img
          alt="Gift icon"
          src="undefined/images/icons/icons-gift.svg"
        />
        <span>
          Refer a teacher
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Three avatars icon",
          "src": "undefined/images/icons/icons-account-group.svg",
        }
      }
      link="/teachers/classrooms/new"
      text="Add a class"
    >
      <a
        className="handy-action focus-on-light"
        href="/teachers/classrooms/new"
      >
        <img
          alt="Three avatars icon"
          src="undefined/images/icons/icons-account-group.svg"
        />
        <span>
          Add a class
        </span>
      </a>
    </HandyAction>
    <HandyAction
      icon={
        Object {
          "alt": "Google Classroom icon",
          "src": "undefined/images/icons/icons-google-classroom.svg",
        }
      }
      link="/teachers/classrooms?modal=google-classroom"
      text="import classes from Google"
    >
      <a
        className="handy-action focus-on-light"
        href="/teachers/classrooms?modal=google-classroom"
      >
        <img
          alt="Google Classroom icon"
          src="undefined/images/icons/icons-google-classroom.svg"
        />
        <span>
          import classes from Google
        </span>
      </a>
    </HandyAction>
  </section>
</HandyActions>
`;
